# device_config_project

./: .gitignore  CMakeLists.txt  config.c  config.h  config.txt  gateway.c  gateway.h  gateway_data.txt  main.c  queue.c  queue.h  run.bat  slave.c  slave.h  test.c
